chore: seal work, part 2
Signed-off-by: Sam Gammon <sam@elide.ventures>